[metadata]
name = cratt
version = 1.6.2
author = ccrsxx
author_email = aminrisal@gmail.com
description = A CLI for creating React App with TypeScript and TailwindCSS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ccrsxx/cratt
project_urls =
    Bug Tracker = https://github.com/ccrsxx/cratt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cra = cratt:cli.run_cli
